parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    MODULUS
    OBJECT
    RETURN
    SKIP

Grammar

Rule 0     S' -> program
Rule 1     type_specifier -> TYPE_BOOL
Rule 2     type_specifier -> TYPE_INT
Rule 3     type_specifier -> TYPE_CHAR
Rule 4     type_specifier -> TYPE_DOUBLE
Rule 5     type_specifier -> TYPE_STRING
Rule 6     arguments -> expression COMMA arguments
Rule 7     function_call -> IDENTIFIER LEFT_PAREN RIGHT_PAREN SEMICOLON
Rule 8     conditional_statement -> IF LEFT_PAREN expression RIGHT_PAREN compound_statement ELSE compound_statement
Rule 9     struct_declaration -> STRUCT IDENTIFIER LEFT_BRACE variable_declaration_list RIGHT_BRACE
Rule 10    variable_declaration_list -> variable_declaration variable_declaration_list
Rule 11    expression_statement -> expression SEMICOLON
Rule 12    expression_statement -> SEMICOLON
Rule 13    statement -> assignment_statement
Rule 14    statement -> expression_statement
Rule 15    statement -> iterative_statement
Rule 16    statement -> conditional_statement
Rule 17    statement -> compound_statement
Rule 18    statement -> print_statement
Rule 19    statement -> function_call
Rule 20    statement -> variable_declaration
Rule 21    iterative_statement -> DO compound_statement WHILE LEFT_PAREN expression RIGHT_PAREN
Rule 22    iterative_statement -> WHILE LEFT_PAREN expression RIGHT_PAREN compound_statement
Rule 23    statement_list -> statement statement_list
Rule 24    print_statement -> LOG LEFT_PAREN arguments RIGHT_PAREN SEMICOLON
Rule 25    empty -> <empty>
Rule 26    assignment_statement -> PUT expression IN IDENTIFIER SEMICOLON
Rule 27    compound_statement -> LEFT_BRACE statement_list RIGHT_BRACE
Rule 28    function_declaration -> FUNCTION IDENTIFIER LEFT_PAREN arguments RIGHT_PAREN compound_statement
Rule 29    declaration_list -> statement declaration_list
Rule 30    variable_declaration -> LET IDENTIFIER ASSIGN expression SEMICOLON
Rule 31    iterative_statement -> FOR LEFT_PAREN expression TO expression RIGHT_PAREN compound_statement
Rule 32    program -> declaration_list
Rule 33    expression -> IDENTIFIER INCREMENT
Rule 34    factor -> literal
Rule 35    term -> term PRODUCT factor
Rule 36    arguments -> expression
Rule 37    function_call -> IDENTIFIER LEFT_PAREN arguments RIGHT_PAREN SEMICOLON
Rule 38    conditional_statement -> IF LEFT_PAREN expression RIGHT_PAREN compound_statement
Rule 39    variable_declaration_list -> empty
Rule 40    iterative_statement -> DO compound_statement WHILE LEFT_PAREN expression RIGHT_PAREN SEMICOLON
Rule 41    iterative_statement -> WHILE expression compound_statement
Rule 42    assignment_statement -> IDENTIFIER ASSIGN expression SEMICOLON
Rule 43    declaration_list -> function_declaration declaration_list
Rule 44    variable_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON
Rule 45    iterative_statement -> FOR LEFT_PAREN expression TO expression STEP expression RIGHT_PAREN compound_statement
Rule 46    literal -> IDENTIFIER LEFT_BRACKET QUOTE IDENTIFIER QUOTE RIGHT_BRACKET
Rule 47    function_declaration -> FUNCTION IDENTIFIER LEFT_PAREN RIGHT_PAREN compound_statement
Rule 48    statement_list -> empty
Rule 49    expression -> IDENTIFIER DECREMENT
Rule 50    factor -> LEFT_PAREN expression RIGHT_PAREN
Rule 51    term -> term DIVIDE factor
Rule 52    conditional_statement -> IF LEFT_PAREN expression RIGHT_PAREN compound_statement ELSE conditional_statement
Rule 53    iterative_statement -> DO compound_statement WHILE expression
Rule 54    assignment_statement -> IDENTIFIER DOT IDENTIFIER ASSIGN expression SEMICOLON
Rule 55    declaration_list -> struct_declaration declaration_list
Rule 56    variable_declaration -> type_specifier IDENTIFIER SEMICOLON
Rule 57    iterative_statement -> FOR expression TO expression compound_statement
Rule 58    literal -> IDENTIFIER DOT IDENTIFIER
Rule 59    expression -> MINUS term
Rule 60    term -> factor
Rule 61    iterative_statement -> DO compound_statement WHILE expression SEMICOLON
Rule 62    declaration_list -> empty
Rule 63    variable_declaration -> LET IDENTIFIER SEMICOLON
Rule 64    iterative_statement -> FOR expression TO expression STEP expression compound_statement
Rule 65    literal -> IDENTIFIER
Rule 66    expression -> expression NOT ASSIGN term
Rule 67    variable_declaration -> IDENTIFIER IDENTIFIER SEMICOLON
Rule 68    iterative_statement -> FOR LEFT_PAREN variable_declaration expression SEMICOLON assignment_statement RIGHT_PAREN compound_statement
Rule 69    literal -> DOUBLE
Rule 70    literal -> INTEGER
Rule 71    literal -> STRING
Rule 72    literal -> TRUE
Rule 73    literal -> FALSE
Rule 74    expression -> NOT term
Rule 75    iterative_statement -> FOR LEFT_PAREN variable_declaration expression SEMICOLON expression RIGHT_PAREN compound_statement
Rule 76    expression -> expression EXP term
Rule 77    iterative_statement -> FOR LEFT_PAREN expression SEMICOLON expression SEMICOLON assignment_statement RIGHT_PAREN compound_statement
Rule 78    expression -> expression GTE term
Rule 79    iterative_statement -> FOR LEFT_PAREN expression SEMICOLON expression SEMICOLON expression RIGHT_PAREN compound_statement
Rule 80    expression -> expression LTE term
Rule 81    expression -> expression IS GREATER THAN term
Rule 82    expression -> expression IS LESS THAN term
Rule 83    expression -> expression GT term
Rule 84    expression -> expression LT term
Rule 85    expression -> expression IS term
Rule 86    expression -> expression EQUALS term
Rule 87    expression -> expression OR term
Rule 88    expression -> expression AND term
Rule 89    expression -> expression PLUS term
Rule 90    expression -> expression MINUS term
Rule 91    expression -> term

Terminals, with rules where they appear

AND                  : 88
ASSIGN               : 30 42 44 54 66
BREAK                : 
COMMA                : 6
DECREMENT            : 49
DIVIDE               : 51
DO                   : 21 40 53 61
DOT                  : 54 58
DOUBLE               : 69
ELSE                 : 8 52
EQUALS               : 86
EXP                  : 76
FALSE                : 73
FOR                  : 31 45 57 64 68 75 77 79
FUNCTION             : 28 47
GREATER              : 81
GT                   : 83
GTE                  : 78
IDENTIFIER           : 7 9 26 28 30 33 37 42 44 46 46 47 49 54 54 56 58 58 63 65 67 67
IF                   : 8 38 52
IN                   : 26
INCREMENT            : 33
INTEGER              : 70
IS                   : 81 82 85
LEFT_BRACE           : 9 27
LEFT_BRACKET         : 46
LEFT_PAREN           : 7 8 21 22 24 28 31 37 38 40 45 47 50 52 68 75 77 79
LESS                 : 82
LET                  : 30 63
LOG                  : 24
LT                   : 84
LTE                  : 80
MINUS                : 59 90
MODULUS              : 
NOT                  : 66 74
OBJECT               : 
OR                   : 87
PLUS                 : 89
PRODUCT              : 35
PUT                  : 26
QUOTE                : 46 46
RETURN               : 
RIGHT_BRACE          : 9 27
RIGHT_BRACKET        : 46
RIGHT_PAREN          : 7 8 21 22 24 28 31 37 38 40 45 47 50 52 68 75 77 79
SEMICOLON            : 7 11 12 24 26 30 37 40 42 44 54 56 61 63 67 68 75 77 77 79 79
SKIP                 : 
STEP                 : 45 64
STRING               : 71
STRUCT               : 9
THAN                 : 81 82
TO                   : 31 45 57 64
TRUE                 : 72
TYPE_BOOL            : 1
TYPE_CHAR            : 3
TYPE_DOUBLE          : 4
TYPE_INT             : 2
TYPE_STRING          : 5
WHILE                : 21 22 40 41 53 61
error                : 

Nonterminals, with rules where they appear

arguments            : 6 24 28 37
assignment_statement : 13 68 77
compound_statement   : 8 8 17 21 22 28 31 38 40 41 45 47 52 53 57 61 64 68 75 77 79
conditional_statement : 16 52
declaration_list     : 29 32 43 55
empty                : 39 48 62
expression           : 6 8 11 21 22 26 30 31 31 36 38 40 41 42 44 45 45 45 50 52 53 54 57 57 61 64 64 64 66 68 75 75 76 77 77 78 79 79 79 80 81 82 83 84 85 86 87 88 89 90
expression_statement : 14
factor               : 35 51 60
function_call        : 19
function_declaration : 43
iterative_statement  : 15
literal              : 34
print_statement      : 18
program              : 0
statement            : 23 29
statement_list       : 23 27
struct_declaration   : 55
term                 : 35 51 59 66 74 76 78 80 81 82 83 84 85 86 87 88 89 90 91
type_specifier       : 44 56
variable_declaration : 10 20 68 75
variable_declaration_list : 9 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (32) program -> . declaration_list
    (29) declaration_list -> . statement declaration_list
    (43) declaration_list -> . function_declaration declaration_list
    (55) declaration_list -> . struct_declaration declaration_list
    (62) declaration_list -> . empty
    (13) statement -> . assignment_statement
    (14) statement -> . expression_statement
    (15) statement -> . iterative_statement
    (16) statement -> . conditional_statement
    (17) statement -> . compound_statement
    (18) statement -> . print_statement
    (19) statement -> . function_call
    (20) statement -> . variable_declaration
    (28) function_declaration -> . FUNCTION IDENTIFIER LEFT_PAREN arguments RIGHT_PAREN compound_statement
    (47) function_declaration -> . FUNCTION IDENTIFIER LEFT_PAREN RIGHT_PAREN compound_statement
    (9) struct_declaration -> . STRUCT IDENTIFIER LEFT_BRACE variable_declaration_list RIGHT_BRACE
    (25) empty -> .
    (26) assignment_statement -> . PUT expression IN IDENTIFIER SEMICOLON
    (42) assignment_statement -> . IDENTIFIER ASSIGN expression SEMICOLON
    (54) assignment_statement -> . IDENTIFIER DOT IDENTIFIER ASSIGN expression SEMICOLON
    (11) expression_statement -> . expression SEMICOLON
    (12) expression_statement -> . SEMICOLON
    (21) iterative_statement -> . DO compound_statement WHILE LEFT_PAREN expression RIGHT_PAREN
    (22) iterative_statement -> . WHILE LEFT_PAREN expression RIGHT_PAREN compound_statement
    (31) iterative_statement -> . FOR LEFT_PAREN expression TO expression RIGHT_PAREN compound_statement
    (40) iterative_statement -> . DO compound_statement WHILE LEFT_PAREN expression RIGHT_PAREN SEMICOLON
    (41) iterative_statement -> . WHILE expression compound_statement
    (45) iterative_statement -> . FOR LEFT_PAREN expression TO expression STEP expression RIGHT_PAREN compound_statement
    (53) iterative_statement -> . DO compound_statement WHILE expression
    (57) iterative_statement -> . FOR expression TO expression compound_statement
    (61) iterative_statement -> . DO compound_statement WHILE expression SEMICOLON
    (64) iterative_statement -> . FOR expression TO expression STEP expression compound_statement
    (68) iterative_statement -> . FOR LEFT_PAREN variable_declaration expression SEMICOLON assignment_statement RIGHT_PAREN compound_statement
    (75) iterative_statement -> . FOR LEFT_PAREN variable_declaration expression SEMICOLON expression RIGHT_PAREN compound_statement
    (77) iterative_statement -> . FOR LEFT_PAREN expression SEMICOLON expression SEMICOLON assignment_statement RIGHT_PAREN compound_statement
    (79) iterative_statement -> . FOR LEFT_PAREN expression SEMICOLON expression SEMICOLON expression RIGHT_PAREN compound_statement
    (8) conditional_statement -> . IF LEFT_PAREN expression RIGHT_PAREN compound_statement ELSE compound_statement
    (38) conditional_statement -> . IF LEFT_PAREN expression RIGHT_PAREN compound_statement
    (52) conditional_statement -> . IF LEFT_PAREN expression RIGHT_PAREN compound_statement ELSE conditional_statement
    (27) compound_statement -> . LEFT_BRACE statement_list RIGHT_BRACE
    (24) print_statement -> . LOG LEFT_PAREN arguments RIGHT_PAREN SEMICOLON
    (7) function_call -> . IDENTIFIER LEFT_PAREN RIGHT_PAREN SEMICOLON
    (37) function_call -> . IDENTIFIER LEFT_PAREN arguments RIGHT_PAREN SEMICOLON
    (30) variable_declaration -> . LET IDENTIFIER ASSIGN expression SEMICOLON
    (44) variable_declaration -> . type_specifier IDENTIFIER ASSIGN expression SEMICOLON
    (56) variable_declaration -> . type_specifier IDENTIFIER SEMICOLON
    (63) variable_declaration -> . LET IDENTIFIER SEMICOLON
    (67) variable_declaration -> . IDENTIFIER IDENTIFIER SEMICOLON
    (33) expression -> . IDENTIFIER INCREMENT
    (49) expression -> . IDENTIFIER DECREMENT
    (59) expression -> . MINUS term
    (66) expression -> . expression NOT ASSIGN term
    (74) expression -> . NOT term
    (76) expression -> . expression EXP term
    (78) expression -> . expression GTE term
    (80) expression -> . expression LTE term
    (81) expression -> . expression IS GREATER THAN term
    (82) expression -> . expression IS LESS THAN term
    (83) expression -> . expression GT term
    (84) expression -> . expression LT term
    (85) expression -> . expression IS term
    (86) expression -> . expression EQUALS term
    (87) expression -> . expression OR term
    (88) expression -> . expression AND term
    (89) expression -> . expression PLUS term
    (90) expression -> . expression MINUS term
    (91) expression -> . term
    (1) type_specifier -> . TYPE_BOOL
    (2) type_specifier -> . TYPE_INT
    (3) type_specifier -> . TYPE_CHAR
    (4) type_specifier -> . TYPE_DOUBLE
    (5) type_specifier -> . TYPE_STRING
    (35) term -> . term PRODUCT factor
    (51) term -> . term DIVIDE factor
    (60) term -> . factor
    (34) factor -> . literal
    (50) factor -> . LEFT_PAREN expression RIGHT_PAREN
    (46) literal -> . IDENTIFIER LEFT_BRACKET QUOTE IDENTIFIER QUOTE RIGHT_BRACKET
    (58) literal -> . IDENTIFIER DOT IDENTIFIER
    (65) literal -> . IDENTIFIER
    (69) literal -> . DOUBLE
    (70) literal -> . INTEGER
    (71) literal -> . STRING
    (72) literal -> . TRUE
    (73) literal -> . FALSE

    FUNCTION        shift and go to state 15
    STRUCT          shift and go to state 18
    $end            reduce using rule 25 (empty -> .)
    PUT             shift and go to state 20
    IDENTIFIER      shift and go to state 16
    SEMICOLON       shift and go to state 22
    DO              shift and go to state 23
    WHILE           shift and go to state 24
    FOR             shift and go to state 25
    IF              shift and go to state 26
    LEFT_BRACE      shift and go to state 19
    LOG             shift and go to state 27
    LET             shift and go to state 28
    MINUS           shift and go to state 30
    NOT             shift and go to state 32
    TYPE_BOOL       shift and go to state 33
    TYPE_INT        shift and go to state 34
    TYPE_CHAR       shift and go to state 35
    TYPE_DOUBLE     shift and go to state 36
    TYPE_STRING     shift and go to state 37
    LEFT_PAREN      shift and go to state 17
    DOUBLE          shift and go to state 40
    INTEGER         shift and go to state 41
    STRING          shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    statement                      shift and go to state 3
    function_declaration           shift and go to state 4
    struct_declaration             shift and go to state 5
    empty                          shift and go to state 6
    assignment_statement           shift and go to state 7
    expression_statement           shift and go to state 8
    iterative_statement            shift and go to state 9
    conditional_statement          shift and go to state 10
    compound_statement             shift and go to state 11
    print_statement                shift and go to state 12
    function_call                  shift and go to state 13
    variable_declaration           shift and go to state 14
    expression                     shift and go to state 21
    type_specifier                 shift and go to state 29
    term                           shift and go to state 31
    factor                         shift and go to state 38
    literal                        shift and go to state 39

state 1

    (0) S' -> program .



state 2

    (32) program -> declaration_list .

    $end            reduce using rule 32 (program -> declaration_list .)


state 3

    (29) declaration_list -> statement . declaration_list
    (29) declaration_list -> . statement declaration_list
    (43) declaration_list -> . function_declaration declaration_list
    (55) declaration_list -> . struct_declaration declaration_list
    (62) declaration_list -> . empty
    (13) statement -> . assignment_statement
    (14) statement -> . expression_statement
    (15) statement -> . iterative_statement
    (16) statement -> . conditional_statement
    (17) statement -> . compound_statement
    (18) statement -> . print_statement
    (19) statement -> . function_call
    (20) statement -> . variable_declaration
    (28) function_declaration -> . FUNCTION IDENTIFIER LEFT_PAREN arguments RIGHT_PAREN compound_statement
    (47) function_declaration -> . FUNCTION IDENTIFIER LEFT_PAREN RIGHT_PAREN compound_statement
    (9) struct_declaration -> . STRUCT IDENTIFIER LEFT_BRACE variable_declaration_list RIGHT_BRACE
    (25) empty -> .
    (26) assignment_statement -> . PUT expression IN IDENTIFIER SEMICOLON
    (42) assignment_statement -> . IDENTIFIER ASSIGN expression SEMICOLON
    (54) assignment_statement -> . IDENTIFIER DOT IDENTIFIER ASSIGN expression SEMICOLON
    (11) expression_statement -> . expression SEMICOLON
    (12) expression_statement -> . SEMICOLON
    (21) iterative_statement -> . DO compound_statement WHILE LEFT_PAREN expression RIGHT_PAREN
    (22) iterative_statement -> . WHILE LEFT_PAREN expression RIGHT_PAREN compound_statement
    (31) iterative_statement -> . FOR LEFT_PAREN expression TO expression RIGHT_PAREN compound_statement
    (40) iterative_statement -> . DO compound_statement WHILE LEFT_PAREN expression RIGHT_PAREN SEMICOLON
    (41) iterative_statement -> . WHILE expression compound_statement
    (45) iterative_statement -> . FOR LEFT_PAREN expression TO expression STEP expression RIGHT_PAREN compound_statement
    (53) iterative_statement -> . DO compound_statement WHILE expression
    (57) iterative_statement -> . FOR expression TO expression compound_statement
    (61) iterative_statement -> . DO compound_statement WHILE expression SEMICOLON
    (64) iterative_statement -> . FOR expression TO expression STEP expression compound_statement
    (68) iterative_statement -> . FOR LEFT_PAREN variable_declaration expression SEMICOLON assignment_statement RIGHT_PAREN compound_statement
    (75) iterative_statement -> . FOR LEFT_PAREN variable_declaration expression SEMICOLON expression RIGHT_PAREN compound_statement
    (77) iterative_statement -> . FOR LEFT_PAREN expression SEMICOLON expression SEMICOLON assignment_statement RIGHT_PAREN compound_statement
    (79) iterative_statement -> . FOR LEFT_PAREN expression SEMICOLON expression SEMICOLON expression RIGHT_PAREN compound_statement
    (8) conditional_statement -> . IF LEFT_PAREN expression RIGHT_PAREN compound_statement ELSE compound_statement
    (38) conditional_statement -> . IF LEFT_PAREN expression RIGHT_PAREN compound_statement
    (52) conditional_statement -> . IF LEFT_PAREN expression RIGHT_PAREN compound_statement ELSE conditional_statement
    (27) compound_statement -> . LEFT_BRACE statement_list RIGHT_BRACE
    (24) print_statement -> . LOG LEFT_PAREN arguments RIGHT_PAREN SEMICOLON
    (7) function_call -> . IDENTIFIER LEFT_PAREN RIGHT_PAREN SEMICOLON
    (37) function_call -> . IDENTIFIER LEFT_PAREN arguments RIGHT_PAREN SEMICOLON
    (30) variable_declaration -> . LET IDENTIFIER ASSIGN expression SEMICOLON
    (44) variable_declaration -> . type_specifier IDENTIFIER ASSIGN expression SEMICOLON
    (56) variable_declaration -> . type_specifier IDENTIFIER SEMICOLON
    (63) variable_declaration -> . LET IDENTIFIER SEMICOLON
    (67) variable_declaration -> . IDENTIFIER IDENTIFIER SEMICOLON
    (33) expression -> . IDENTIFIER INCREMENT
    (49) expression -> . IDENTIFIER DECREMENT
    (59) expression -> . MINUS term
    (66) expression -> . expression NOT ASSIGN term
    (74) expression -> . NOT term
    (76) expression -> . expression EXP term
    (78) expression -> . expression GTE term
    (80) expression -> . expression LTE term
    (81) expression -> . expression IS GREATER THAN term
    (82) expression -> . expression IS LESS THAN term
    (83) expression -> . expression GT term
    (84) expression -> . expression LT term
    (85) expression -> . expression IS term
    (86) expression -> . expression EQUALS term
    (87) expression -> . expression OR term
    (88) expression -> . expression AND term
    (89) expression -> . expression PLUS term
    (90) expression -> . expression MINUS term
    (91) expression -> . term
    (1) type_specifier -> . TYPE_BOOL
    (2) type_specifier -> . TYPE_INT
    (3) type_specifier -> . TYPE_CHAR
    (4) type_specifier -> . TYPE_DOUBLE
    (5) type_specifier -> . TYPE_STRING
    (35) term -> . term PRODUCT factor
    (51) term -> . term DIVIDE factor
    (60) term -> . factor
    (34) factor -> . literal
    (50) factor -> . LEFT_PAREN expression RIGHT_PAREN
    (46) literal -> . IDENTIFIER LEFT_BRACKET QUOTE IDENTIFIER QUOTE RIGHT_BRACKET
    (58) literal -> . IDENTIFIER DOT IDENTIFIER
    (65) literal -> . IDENTIFIER
    (69) literal -> . DOUBLE
    (70) literal -> . INTEGER
    (71) literal -> . STRING
    (72) literal -> . TRUE
    (73) literal -> . FALSE

    FUNCTION        shift and go to state 15
    STRUCT          shift and go to state 18
    $end            reduce using rule 25 (empty -> .)
    PUT             shift and go to state 20
    IDENTIFIER      shift and go to state 16
    SEMICOLON       shift and go to state 22
    DO              shift and go to state 23
    WHILE           shift and go to state 24
    FOR             shift and go to state 25
    IF              shift and go to state 26
    LEFT_BRACE      shift and go to state 19
    LOG             shift and go to state 27
    LET             shift and go to state 28
    MINUS           shift and go to state 30
    NOT             shift and go to state 32
    TYPE_BOOL       shift and go to state 33
    TYPE_INT        shift and go to state 34
    TYPE_CHAR       shift and go to state 35
    TYPE_DOUBLE     shift and go to state 36
    TYPE_STRING     shift and go to state 37
    LEFT_PAREN      shift and go to state 17
    DOUBLE          shift and go to state 40
    INTEGER         shift and go to state 41
    STRING          shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44

    statement                      shift and go to state 3
    declaration_list               shift and go to state 45
    function_declaration           shift and go to state 4
    struct_declaration             shift and go to state 5
    empty                          shift and go to state 6
    assignment_statement           shift and go to state 7
    expression_statement           shift and go to state 8
    iterative_statement            shift and go to state 9
    conditional_statement          shift and go to state 10
    compound_statement             shift and go to state 11
    print_statement                shift and go to state 12
    function_call                  shift and go to state 13
    variable_declaration           shift and go to state 14
    expression                     shift and go to state 21
    type_specifier                 shift and go to state 29
    term                           shift and go to state 31
    factor                         shift and go to state 38
    literal                        shift and go to state 39

state 4

    (43) declaration_list -> function_declaration . declaration_list
    (29) declaration_list -> . statement declaration_list
    (43) declaration_list -> . function_declaration declaration_list
    (55) declaration_list -> . struct_declaration declaration_list
    (62) declaration_list -> . empty
    (13) statement -> . assignment_statement
    (14) statement -> . expression_statement
    (15) statement -> . iterative_statement
    (16) statement -> . conditional_statement
    (17) statement -> . compound_statement
    (18) statement -> . print_statement
    (19) statement -> . function_call
    (20) statement -> . variable_declaration
    (28) function_declaration -> . FUNCTION IDENTIFIER LEFT_PAREN arguments RIGHT_PAREN compound_statement
    (47) function_declaration -> . FUNCTION IDENTIFIER LEFT_PAREN RIGHT_PAREN compound_statement
    (9) struct_declaration -> . STRUCT IDENTIFIER LEFT_BRACE variable_declaration_list RIGHT_BRACE
    (25) empty -> .
    (26) assignment_statement -> . PUT expression IN IDENTIFIER SEMICOLON
    (42) assignment_statement -> . IDENTIFIER ASSIGN expression SEMICOLON
    (54) assignment_statement -> . IDENTIFIER DOT IDENTIFIER ASSIGN expression SEMICOLON
    (11) expression_statement -> . expression SEMICOLON
    (12) expression_statement -> . SEMICOLON
    (21) iterative_statement -> . DO compound_statement WHILE LEFT_PAREN expression RIGHT_PAREN
    (22) iterative_statement -> . WHILE LEFT_PAREN expression RIGHT_PAREN compound_statement
    (31) iterative_statement -> . FOR LEFT_PAREN expression TO expression RIGHT_PAREN compound_statement
    (40) iterative_statement -> . DO compound_statement WHILE LEFT_PAREN expression RIGHT_PAREN SEMICOLON
    (41) iterative_statement -> . WHILE expression compound_statement
    (45) iterative_statement -> . FOR LEFT_PAREN expression TO expression STEP expression RIGHT_PAREN compound_statement
    (53) iterative_statement -> . DO compound_statement WHILE expression
    (57) iterative_statement -> . FOR expression TO expression compound_statement
    (61) iterative_statement -> . DO compound_statement WHILE expression SEMICOLON
    (64) iterative_statement -> . FOR expression TO expression STEP expression compound_statement
    (68) iterative_statement -> . FOR LEFT_PAREN variable_declaration expression SEMICOLON assignment_statement RIGHT_PAREN compound_statement
    (75) iterative_statement -> . FOR LEFT_PAREN variable_declaration expression SEMICOLON expression RIGHT_PAREN compound_statement
    (77) iterative_statement -> . FOR LEFT_PAREN expression SEMICOLON expression SEMICOLON assignment_statement RIGHT_PAREN compound_statement
    (79) iterative_statement -> . FOR LEFT_PAREN expression SEMICOLON expression SEMICOLON expression RIGHT_PAREN compound_statement
    (8) conditional_statement -> . IF LEFT_PAREN expression RIGHT_PAREN compound_statement ELSE compound_statement
    (38) conditional_statement -> . IF LEFT_PAREN expression RIGHT_PAREN compound_statement
    (52) conditional_statement -> . IF LEFT_PAREN expression RIGHT_PAREN compound_statement ELSE conditional_statement
    (27) compound_statement -> . LEFT_BRACE statement_list RIGHT_BRACE
    (24) print_statement -> . LOG LEFT_PAREN arguments RIGHT_PAREN SEMICOLON
    (7) function_call -> . IDENTIFIER LEFT_PAREN RIGHT_PAREN SEMICOLON
    (37) function_call -> . IDENTIFIER LEFT_PAREN arguments RIGHT_PAREN SEMICOLON
    (30) variable_declaration -> . LET IDENTIFIER ASSIGN expression SEMICOLON
    (44) variable_declaration -> . type_specifier IDENTIFIER ASSIGN expression SEMICOLON
    (56) variable_declaration -> . type_specifier IDENTIFIER SEMICOLON
    (63) variable_declaration -> . LET IDENTIFIER SEMICOLON
    (67) variable_declaration -> . IDENTIFIER IDENTIFIER SEMICOLON
    (33) expression -> . IDENTIFIER INCREMENT
    (49) expression -> . IDENTIFIER DECREMENT
    (59) expression -> . MINUS term
    (66) expression -> . expression NOT ASSIGN term
    (74) expression -> . NOT term
    (76) expression -> . expression EXP term
    (78) expression -> . expression GTE term
    (80) expression -> . expression LTE term
    (81) expression -> . expression IS GREATER THAN term
    (82) expression -> . expression IS LESS THAN term
    (83) expression -> . expression GT term
    (84) expression -> . expression LT term
    (85) expression -> . expression IS term
    (86) expression -> . expression EQUALS term
    (87) expression -> . expression OR term
    (88) expression -> . expression AND term
    (89) expression -> . expression PLUS term
    (90) expression -> . expression MINUS term
    (91) expression -> . term
    (1) type_specifier -> . TYPE_BOOL
    (2) type_specifier -> . TYPE_INT
    (3) type_specifier -> . TYPE_CHAR
    (4) type_specifier -> . TYPE_DOUBLE
    (5) type_specifier -> . TYPE_STRING
    (35) term -> . term PRODUCT factor
    (51) term -> . term DIVIDE factor
    (60) term -> . factor
    (34) factor -> . literal
    (50) factor -> . LEFT_PAREN expression RIGHT_PAREN
    (46) literal -> . IDENTIFIER LEFT_BRACKET QUOTE IDENTIFIER QUOTE RIGHT_BRACKET
    (58) literal -> . IDENTIFIER DOT IDENTIFIER
    (65) literal -> . IDENTIFIER
    (69) literal -> . DOUBLE
    (70) literal -> . INTEGER
    (71) literal -> . STRING
    (72) literal -> . TRUE
    (73) literal -> . FALSE

    FUNCTION        shift and go to state 15
    STRUCT          shift and go to state 18
    $end            reduce using rule 25 (empty -> .)
    PUT             shift and go to state 20
    IDENTIFIER      shift and go to state 16
    SEMICOLON       shift and go to state 22
    DO              shift and go to state 23
    WHILE           shift and go to state 24
    FOR             shift and go to state 25
    IF              shift and go to state 26
    LEFT_BRACE      shift and go to state 19
    LOG             shift and go to state 27
    LET             shift and go to state 28
    MINUS           shift and go to state 30
    NOT             shift and go to state 32
    TYPE_BOOL       shift and go to state 33
    TYPE_INT        shift and go to state 34
    TYPE_CHAR       shift and go to state 35
    TYPE_DOUBLE     shift and go to state 36
    TYPE_STRING     shift and go to state 37
    LEFT_PAREN      shift and go to state 17
    DOUBLE          shift and go to state 40
    INTEGER         shift and go to state 41
    STRING          shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44

    function_declaration           shift and go to state 4
    declaration_list               shift and go to state 46
    statement                      shift and go to state 3
    struct_declaration             shift and go to state 5
    empty                          shift and go to state 6
    assignment_statement           shift and go to state 7
    expression_statement           shift and go to state 8
    iterative_statement            shift and go to state 9
    conditional_statement          shift and go to state 10
    compound_statement             shift and go to state 11
    print_statement                shift and go to state 12
    function_call                  shift and go to state 13
    variable_declaration           shift and go to state 14
    expression                     shift and go to state 21
    type_specifier                 shift and go to state 29
    term                           shift and go to state 31
    factor                         shift and go to state 38
    literal                        shift and go to state 39

state 5
